crates/keron-lang/tests/corpus/errors/check/nullable_arithmetic.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: `+` requires `Int`, `Double`, or `String` operands, found `Int?` and `Int?`
  --> 3:9
  |
3 | val c = a + b
  |         ^^^^^
